[gd_scene load_steps=2 format=3 uid="uid://dohicu3yn8h2s"]

[ext_resource type="Script" path="res://scripts/actors/components/actor_movement_no_ledge_fall.gd" id="1_o6756"]

[node name="ActorMovementNoLedgeFall" type="Node2D"]
script = ExtResource("1_o6756")

[node name="FloorLedgeDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 2)

[node name="PositionLeftFloorLedgeDetector" type="Marker2D" parent="."]
position = Vector2(-10, 0)

[node name="PositionRightFloorLedgeDetector" type="Marker2D" parent="."]
position = Vector2(10, 0)
